fix (style): submenu card and submenu_trait displaying on mobile devices

--- a/sass_files/_layouts.scss
+++ b/sass_files/_layouts.scss
@@ -73,7 +73,8 @@
 }
 .submenu {
     &_name {
-        line-height: 300px;
+        padding-top:1em;
+        padding-bottom:1em;
         font-size: 4em;
         vertical-align: center;
     }
