--- a/sass_files/_mediaqueries.scss
+++ b/sass_files/_mediaqueries.scss
@@ -5,6 +5,9 @@
 }
 
 @media screen and (max-width:960px){
+    main{
+        padding:0px;
+    }
     .menu_box{
         width:95%;
         margin:auto;
@@ -19,10 +22,16 @@
             }
         }
     }
-    .submenu{
-        &_card{
-            width:95%;
+    .submenu {
+        &_card {
+            width: 100%;
             min-height: 95vh;
+            box-shadow:none;
+            padding:0px;
+        }
+
+        &_trait {
+            display: none;
         }
     }
 }
